// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NoRegressionStack > not a function (with cause) 1`] = `
[Error: Property failed after 1 tests
{ seed: 42, path: "0:0", endOnFailure: true }
Counterexample: [0]
Shrunk 1 time(s)

Hint: Enable verbose mode in order to have the list of all failing values encountered during the run]
`;

exports[`NoRegressionStack > not a function 1`] = `
[Error: Property failed after 1 tests
{ seed: 42, path: "0:0", endOnFailure: true }
Counterexample: [0]
Shrunk 1 time(s)
Got TypeError: v is not a function
    at packages/fast-check/test/e2e/NoRegressionStack.spec.ts:?:?
    at AsyncProperty.predicate (packages/fast-check/src/check/property/AsyncProperty.ts:?:?)
    at AsyncProperty.run (packages/fast-check/src/check/property/AsyncProperty.generic.ts:?:?)
    at asyncRunIt (packages/fast-check/src/check/runner/Runner.ts:?:?)
    at packages/fast-check/test/e2e/__test-helpers__/StackSanitizer.ts:?:?

Hint: Enable verbose mode in order to have the list of all failing values encountered during the run]
`;

exports[`NoRegressionStack > return false (with cause) 1`] = `
[Error: Property failed after 2 tests
{ seed: 42, path: "1:0:1:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0", endOnFailure: true }
Counterexample: [0,1]
Shrunk 32 time(s)

Hint: Enable verbose mode in order to have the list of all failing values encountered during the run]
`;

exports[`NoRegressionStack > return false 1`] = `
[Error: Property failed after 2 tests
{ seed: 42, path: "1:0:1:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0", endOnFailure: true }
Counterexample: [0,1]
Shrunk 32 time(s)
Got error: Property failed by returning false
    at outputToPropertyAnswer (packages/fast-check/src/check/property/AsyncProperty.generic.ts:?:?)
    at AsyncProperty.run (packages/fast-check/src/check/property/AsyncProperty.generic.ts:?:?)
    at asyncRunIt (packages/fast-check/src/check/runner/Runner.ts:?:?)
    at node_modules/.pnpm/@vitest+runner@<version>/node_modules/@vitest/runner/dist/chunk-artifact.js:?:?

Hint: Enable verbose mode in order to have the list of all failing values encountered during the run]
`;

exports[`NoRegressionStack > throw (with cause) 1`] = `
[Error: Property failed after 2 tests
{ seed: 42, path: "1:0:1:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0", endOnFailure: true }
Counterexample: [0,1]
Shrunk 32 time(s)

Hint: Enable verbose mode in order to have the list of all failing values encountered during the run]
`;

exports[`NoRegressionStack > throw 1`] = `
[Error: Property failed after 2 tests
{ seed: 42, path: "1:0:1:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0:0", endOnFailure: true }
Counterexample: [0,1]
Shrunk 32 time(s)
Got error: a must be >= b
    at packages/fast-check/test/e2e/NoRegressionStack.spec.ts:?:?
    at AsyncProperty.predicate (packages/fast-check/src/check/property/AsyncProperty.ts:?:?)
    at AsyncProperty.run (packages/fast-check/src/check/property/AsyncProperty.generic.ts:?:?)
    at asyncRunIt (packages/fast-check/src/check/runner/Runner.ts:?:?)
    at node_modules/.pnpm/@vitest+runner@<version>/node_modules/@vitest/runner/dist/chunk-artifact.js:?:?

Hint: Enable verbose mode in order to have the list of all failing values encountered during the run]
`;
